Added background image on home page & modified html

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,10 @@
  * file per style scope.
  *
  *= require jquery-ui/autocomplete
- *= require_tree .
+ *= require bootstrap.min
+ *= require bootflat.min
+ *= require datepicker3
+ *= require font-awesome.min
+ *= require custom
  *= require_self
  */
