--- a/app/views/layouts/_side_bar.html.erb
+++ b/app/views/layouts/_side_bar.html.erb
@@ -1,10 +1,13 @@
 <div class="side-wrapper active">
   <aside class="aside-bar" id="sidebar-content">
     <div class="list-group aside-menu">
-      <a class="list-group-item" href="#account-menu" data-toggle="collapse">HOW IT WORKS</a>
-      <a class="list-group-item" href="#account-menu" data-toggle="collapse">COMPANY</a>
-    </div>
+      <a class="list-group-item disabled" href="#">My Account</a>
+      <a class="list-group-item active" href="#">New Booking</a>
+      <a class="list-group-item disabled" href="#">Active Booking</a>
+      <a class="list-group-item disabled" href="#">Booking on Hold</a>
+      <a class="list-group-item disabled" href="#">Draft Booking</a>
+      <a class="list-group-item disabled" href="#">Archived Bookings</a>
+    </div>  
   </aside>
 </div>
-
 <div class="page-overlay"></div>
