--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,56 +6,16 @@
 <%
   background_color = current_user && current_user.seller? ? "#f8f8f8" : "#cae5ff"
 %>
-<body class="air-bg" style="background-color: <%= background_color%>">
-<script>
-  window.fbAsyncInit = function() {
-    FB.init({
-      appId      : '1490486881227462',
-      xfbml      : true,
-      version    : 'v2.2'
-    });
-
-    // ADD ADDITIONAL FACEBOOK CODE HERE
-
-    function onLogin(response) {
-      if (response.status == 'connected') {
-        FB.api('/me?fields=first_name', function(data) {
-          var welcomeBlock = document.getElementById('fb-welcome');
-          welcomeBlock.innerHTML = 'Hello, ' + data.first_name + '!';
-        });
-      }
-    }
-
-    FB.getLoginStatus(function(response) {
-      // Check login status on load, and if the user is
-      // already logged in, go directly to the welcome message.
-      if (response.status == 'connected') {
-        onLogin(response);
-      } else {
-        // Otherwise, show Login dialog first.
-        FB.login(function(response) {
-          onLogin(response);
-        }, {scope: 'user_friends, email'});
-      }
-    });
-  };
-
-  (function(d, s, id){
-     var js, fjs = d.getElementsByTagName(s)[0];
-     if (d.getElementById(id)) {return;}
-     js = d.createElement(s); js.id = id;
-     js.src = "//connect.facebook.net/en_US/sdk.js";
-     fjs.parentNode.insertBefore(js, fjs);
-   }(document, 'script', 'facebook-jssdk'));
-</script>
+<% body_class = request.url == root_url ? "air-bg" : "" %>
+<body class="<%= body_class %>">
   <%= render :partial => "layouts/header" %>
-    <% if  user_signed_in? && current_user.seller?  %>
-      <%= render :partial => "layouts/seller_side_bar" %>
-    <%elsif user_signed_in? && current_user.buyer?%>
-      <%= render :partial => "layouts/buyer_side_bar" %>
-    <%else%>
-      <%= render :partial => "layouts/side_bar" %>    
-    <%end%>
+  <% if  user_signed_in? && current_user.seller?  %>
+    <%= render :partial => "layouts/seller_side_bar" %>
+  <%elsif user_signed_in? && current_user.buyer?%>
+    <%= render :partial => "layouts/buyer_side_bar" %>
+  <%else%>
+    <%= render :partial => "layouts/side_bar" %>    
+  <%end%>
   <div class="container-fluid">
     <div class="right-body">
       <div class="container">
@@ -66,7 +26,55 @@
         </div> 
       </div>  
     </div>  
-  </div>    
-  <%#= render partial: "layouts/footer"%>
+  </div>
+  <% unless user_signed_in?%>
+    <%= render template: "devise/sessions/new", locals: { resource: User.new, resource_name: "user" }%>
+  <% end %>
+  <%= render partial: "layouts/footer"%>
+  <%= javascript_include_tag 'application'%>  
+  <script type="text/javascript">
+    $(document).ready(function(){
+      call_selec();
+    });
+    window.fbAsyncInit = function() {
+      FB.init({
+        appId      : '1490486881227462',
+        xfbml      : true,
+        version    : 'v2.2'
+      });
+
+      // ADD ADDITIONAL FACEBOOK CODE HERE
+
+      function onLogin(response) {
+        if (response.status == 'connected') {
+          FB.api('/me?fields=first_name', function(data) {
+            var welcomeBlock = document.getElementById('fb-welcome');
+            welcomeBlock.innerHTML = 'Hello, ' + data.first_name + '!';
+          });
+        }
+      }
+
+      FB.getLoginStatus(function(response) {
+        // Check login status on load, and if the user is
+        // already logged in, go directly to the welcome message.
+        if (response.status == 'connected') {
+          onLogin(response);
+        } else {
+          // Otherwise, show Login dialog first.
+          FB.login(function(response) {
+            onLogin(response);
+          }, {scope: 'user_friends, email'});
+        }
+      });
+    };
+
+    (function(d, s, id){
+       var js, fjs = d.getElementsByTagName(s)[0];
+       if (d.getElementById(id)) {return;}
+       js = d.createElement(s); js.id = id;
+       js.src = "//connect.facebook.net/en_US/sdk.js";
+       fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));    
+  </script>
 </body>
 </html>
