--- a/app/views/home/buyer_landing.html.erb
+++ b/app/views/home/buyer_landing.html.erb
@@ -43,27 +43,27 @@
                 <div class="col-xs-1">
                   <div class="form-group">
                     <label>Length</label>
-                    <%= text_field_tag "search[][length]", search_parameter['length'], class: "form-control", id: "hm-length", placeholder: "CM", required: 'required', 'pattern' => "\d*" %>
+                    <%= text_field_tag "search[][length]", search_parameter['length'], class: "form-control", id: "hm-length", placeholder: "CM", required: 'required', 'pattern' => '^\d+$' %>
                   </div>
                 </div>
 
                 <div class="col-xs-1">
                   <div class="form-group">
                     <label for="hm-width">Width</label>
-                    <%= text_field_tag "search[][width]", search_parameter['width'], class: "form-control", id: "hm-width", placeholder: "CM", required: 'required' %>
+                    <%= text_field_tag "search[][width]", search_parameter['width'], class: "form-control", id: "hm-width", placeholder: "CM", required: 'required', 'pattern' => '^\d+$' %>
                   </div>
                 </div>
                 <div class="col-xs-1">
                   <div class="form-group">
                     <label for="hm-height">Height</label>
-                    <%= text_field_tag "search[][height]", search_parameter['height'], class: "form-control", id: "hm-height", placeholder: "CM", required: 'required' %>
+                    <%= text_field_tag "search[][height]", search_parameter['height'], class: "form-control", id: "hm-height", placeholder: "CM", required: 'required', 'pattern' => '^\d+$' %>
                   </div>
                 </div>
 
                 <div class="col-xs-1">
                   <div class="form-group">
                     <label for="hm-weight">Weight</label>
-                    <%= text_field_tag "search[][weight]", search_parameter['weight'], class: "form-control", id: "hm-weight", placeholder: "KG", required: 'required' %>
+                    <%= text_field_tag "search[][weight]", search_parameter['weight'], class: "form-control", id: "hm-weight", placeholder: "KG", required: 'required', 'pattern' => '^\d+$' %>
                   </div>                           
                 </div>
 
