--- a/app/views/bookings/_result_content.html.erb
+++ b/app/views/bookings/_result_content.html.erb
@@ -1,4 +1,4 @@
-<div class="col-xs-9 col-xs-offset-1">
+<div class="col-xs-8">
   <div class="row">
     <div class="col-xs-12">
       <div class="rlist-wrapper">
@@ -30,7 +30,7 @@
             <div class="rb-item rb-buk">
               <button style="display: <%= is_in_cart?(@draft_booking, freight_rate) ? 'block' : 'none' %>" class="btn selected" id = "selected_freight_<%=  freight_rate.id%>" freight_id = "<%= freight_rate.id %>" booking_id="<%= @draft_booking.id%>" type="button" onclick="remove_from_cart(<%= @draft_booking.id%>, <%= freight_rate.id%>);">Selected</button>
 
-              <button style="display: <%= !is_in_cart?(@draft_booking, freight_rate) ? 'block' : 'none' %>" class="btn btn-success select" id = "freight_<%=  freight_rate.id%>" freight_id = "<%= freight_rate.id %>" booking_id="<%= @draft_booking.id%>" type="button" onclick="add_to_cart(<%= @draft_booking.id%>, <%= freight_rate.id%>);">Select</button>
+              <button style="display: <%= !is_in_cart?(@draft_booking, freight_rate) ? 'block' : 'none' %>" class="btn btn-success select btn-xs" id = "freight_<%=  freight_rate.id%>" freight_id = "<%= freight_rate.id %>" booking_id="<%= @draft_booking.id%>" type="button" onclick="add_to_cart(<%= @draft_booking.id%>, <%= freight_rate.id%>);">Select</button>
             </div>
           </div>
 
@@ -40,9 +40,9 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-xs-8 col-xs-offset-2">
-      <div class="form-group text-center">
-        <%= link_to 'Book Now', 'javascript:void()', onclick: "check_cart('/address_books/add_supplier_consignee')", class: "btn btn-primary"%>
+    <div class="col-xs-12">
+      <div class="form-group text-right">
+        <%= link_to 'Book Now', 'javascript:void()', onclick: "check_cart('/address_books/add_supplier_consignee')", class: "btn btn-primary",  style: "margin-right:10px;" %>
         <%= link_to 'javascript:void()', class: "btn btn-default pull-right", onclick: "check_cart('/bookings/booking_summary')" do %>
           View Summary
           <i class="fa fa-angle-double-right"></i>  
@@ -51,3 +51,4 @@
     </div>
   </div>  
 </div>
+<div class="col-xs-2 slctd-sr-list cart_detail"><%= render :partial => 'bookings/cart_details'%></div>   
