--- a/app/views/address_books/_supplier_consignee_form.html.erb
+++ b/app/views/address_books/_supplier_consignee_form.html.erb
@@ -3,7 +3,7 @@
     <div class="col-xs-3">
       <div class="form-group seperator-15">
         <label>Address</label>
-        <select class="form-control selecter booking_address_for" name='booking_id' required='required'>
+        <select class="form-control selecter booking_address_for" id='address_booking_id' name='booking_id' required='required'>
           <% (session[:cart]|| []).each do |key, value| %>
             <% booking = Booking.find(key) %>
             <% if params[:booking_id] == booking.id.to_s %>
@@ -19,6 +19,21 @@
         </select>
       </div>
     </div>
+
+    <div class="col-xs-3">
+      <div class="form-group seperator-15">
+        <label>Address Book(Supplier)</label>
+        <%= select_tag "supplier_address_book", options_from_collection_for_select(current_user.address_books.supplier_address, "id", "name", selected: params[:supplier_address_book_id]), class: "form-control selecter booking_address_for", name: "supplier_address_book_id", include_blank: true %>  
+      </div>
+    </div>
+
+    <div class="col-xs-3">
+      <div class="form-group seperator-15">
+        <label>Address Book(Delivery)</label>
+        <%= select_tag "consignee_address_book", options_from_collection_for_select(current_user.address_books.consignee_address, "id", "name", selected: params[:consignee_address_book_id]), class: "form-control selecter booking_address_for", name: "consignee_address_book_id", include_blank: true %>  
+      </div>
+    </div>
+
     <input type="hidden" value="supplier" name="supplier[address_type]" id="supplier_address_type">
     <input type="hidden" value="consignee" name="consignee[address_type]" id="supplier_address_type">
     <div class="col-xs-8 col-xs-offset-1">
