added the complaint section
deleted the file

removed the routes

added the changes

--- a/app/views/layouts/_buyer_side_bar.html.erb
+++ b/app/views/layouts/_buyer_side_bar.html.erb
@@ -12,6 +12,9 @@
        <li>
          <a href="/privacy">Privacy</a>
        </li>
+        <li>
+          <a href="/complaints">Complaints</a>
+        </li>
        <li>
          <a href="/deleteUserAccount">Delete Account</a>
        </li>
