--- a/app/views/bookings/get_quote.html.erb
+++ b/app/views/bookings/get_quote.html.erb
@@ -116,11 +116,11 @@
             <li class="list-group-item"><b>Filter Data</b></li>
             <li class="list-group-item">
               <small>Price </small><%= text_field_tag :max_price, params[:max_price], id: "price-range-txt", size: 10, placeholder: "Max Price" %><br />
-              <input type=range min=100 max=10000 value=100 id="price-range">
+              <input type=range min=5000 max=1000000 value=100 id="price-range">
             </li>
             <li class="list-group-item">
               <small>Time </small><%= text_field_tag :transit_time, params[:transit_time], id: "transit-time-txt", size: 10, placeholder: "Transit Time" %><br />
-              <input type=range min=2 max=30 value=2 id="transit-time">
+              <input type=range min=2 max=60 value=2 id="transit-time">
             </li>
             <li class="list-group-item">
               <%= select_tag "shipper_ids", options_from_collection_for_select(@sellers, "id", "company_name"), prompt: "Select Shipper", multiple: true %>
